# Chessy

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp  tests.cpp
src/: board.cpp  board.h  board_checker.cpp  board_checker.h  boards.h  chessman.h  colorless_board.cpp  colorless_board.h  colorless_independent_board.cpp  colorless_independent_board.h  dominant_board.cpp  dominant_board.h  independent_board.cpp  independent_board.h  input  io_interface.cpp  io_interface.h  main.cpp  modes.h  solution.cpp  solution.h  solver.cpp  solver.h  superclass.cpp
test/: tests.cpp
test/data/3x3/: 002  003  004  009  012
test/data/colorful/: 001  002  003  004  005  006
test/data/dominant/: 001  002  003  004
test/data/ic_borderline/: 001  005  006  007  008  010  011
test/data/ic_combinations/: 001  002  003  004
test/data/queens/: 001  002  004
test/data/rooks/: 001  002  003  004
